finish data processing

--- a/travel.ipynb
+++ b/travel.ipynb
@@ -755,6 +755,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* fill NaN Value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1095,10 +1102,437 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>CityTier</th>\n",
+       "      <th>DurationOfPitch</th>\n",
+       "      <th>NumberOfPersonVisiting</th>\n",
+       "      <th>NumberOfFollowups</th>\n",
+       "      <th>PreferredPropertyStar</th>\n",
+       "      <th>NumberOfTrips</th>\n",
+       "      <th>Passport</th>\n",
+       "      <th>PitchSatisfactionScore</th>\n",
+       "      <th>OwnCar</th>\n",
+       "      <th>NumberOfChildrenVisiting</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>ProdTaken</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>1955.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>978.000000</td>\n",
+       "      <td>37.331475</td>\n",
+       "      <td>1.641432</td>\n",
+       "      <td>15.529053</td>\n",
+       "      <td>2.922762</td>\n",
+       "      <td>3.720205</td>\n",
+       "      <td>3.565729</td>\n",
+       "      <td>3.248082</td>\n",
+       "      <td>0.291049</td>\n",
+       "      <td>3.067519</td>\n",
+       "      <td>0.619437</td>\n",
+       "      <td>1.206650</td>\n",
+       "      <td>23527.628448</td>\n",
+       "      <td>0.195908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>564.504207</td>\n",
+       "      <td>8.999316</td>\n",
+       "      <td>0.908744</td>\n",
+       "      <td>7.935264</td>\n",
+       "      <td>0.712276</td>\n",
+       "      <td>1.001011</td>\n",
+       "      <td>0.792204</td>\n",
+       "      <td>1.788551</td>\n",
+       "      <td>0.454362</td>\n",
+       "      <td>1.372915</td>\n",
+       "      <td>0.485649</td>\n",
+       "      <td>0.856821</td>\n",
+       "      <td>5516.575937</td>\n",
+       "      <td>0.397000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>489.500000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20358.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>978.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>22412.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1466.500000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>25401.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1955.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>98678.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                id          Age     CityTier  DurationOfPitch  \\\n",
+       "count  1955.000000  1955.000000  1955.000000      1955.000000   \n",
+       "mean    978.000000    37.331475     1.641432        15.529053   \n",
+       "std     564.504207     8.999316     0.908744         7.935264   \n",
+       "min       1.000000    18.000000     1.000000         5.000000   \n",
+       "25%     489.500000    31.000000     1.000000         9.000000   \n",
+       "50%     978.000000    36.000000     1.000000        14.000000   \n",
+       "75%    1466.500000    43.000000     3.000000        19.000000   \n",
+       "max    1955.000000    61.000000     3.000000        36.000000   \n",
+       "\n",
+       "       NumberOfPersonVisiting  NumberOfFollowups  PreferredPropertyStar  \\\n",
+       "count             1955.000000        1955.000000            1955.000000   \n",
+       "mean                 2.922762           3.720205               3.565729   \n",
+       "std                  0.712276           1.001011               0.792204   \n",
+       "min                  1.000000           1.000000               3.000000   \n",
+       "25%                  2.000000           3.000000               3.000000   \n",
+       "50%                  3.000000           4.000000               3.000000   \n",
+       "75%                  3.000000           4.000000               4.000000   \n",
+       "max                  5.000000           6.000000               5.000000   \n",
+       "\n",
+       "       NumberOfTrips     Passport  PitchSatisfactionScore       OwnCar  \\\n",
+       "count    1955.000000  1955.000000             1955.000000  1955.000000   \n",
+       "mean        3.248082     0.291049                3.067519     0.619437   \n",
+       "std         1.788551     0.454362                1.372915     0.485649   \n",
+       "min         1.000000     0.000000                1.000000     0.000000   \n",
+       "25%         2.000000     0.000000                2.000000     0.000000   \n",
+       "50%         3.000000     0.000000                3.000000     1.000000   \n",
+       "75%         4.000000     1.000000                4.000000     1.000000   \n",
+       "max        19.000000     1.000000                5.000000     1.000000   \n",
+       "\n",
+       "       NumberOfChildrenVisiting  MonthlyIncome    ProdTaken  \n",
+       "count               1955.000000    1955.000000  1955.000000  \n",
+       "mean                   1.206650   23527.628448     0.195908  \n",
+       "std                    0.856821    5516.575937     0.397000  \n",
+       "min                    0.000000    1000.000000     0.000000  \n",
+       "25%                    1.000000   20358.000000     0.000000  \n",
+       "50%                    1.000000   22412.000000     0.000000  \n",
+       "75%                    2.000000   25401.500000     0.000000  \n",
+       "max                    3.000000   98678.000000     1.000000  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def age_grouping(data):\n",
+    "    data.loc[data[\"Age\"] <= 31, \"Age\"] = 0\n",
+    "    data.loc[(data[\"Age\"] > 31) & (data[\"Age\"] <= 36), \"Age\"] = 1\n",
+    "    data.loc[(data[\"Age\"] > 36) & (data[\"Age\"] <= 43), \"Age\"] = 2\n",
+    "    data.loc[data[\"Age\"] > 43, \"Age\"] = 3\n",
+    "    data[\"Age\"] = data[\"Age\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_grouping(train)\n",
+    "age_grouping(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Self Enquiry       1389\n",
+       "Company Invited     566\n",
+       "Name: TypeofContact, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[\"TypeofContact\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contact_dict = {\"Self Enquiry\" :0, \"Company Invited\": 1}\n",
+    "train[\"TypeofContact\"] = train[\"TypeofContact\"].map(contact_dict)\n",
+    "test[\"TypeofContact\"] = test[\"TypeofContact\"].map(contact_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def duration_pitch(data):\n",
+    "    data.loc[data[\"DurationOfPitch\"] <= 9, \"DurationOfPitch\"] = 0\n",
+    "    data.loc[(data[\"DurationOfPitch\"] > 9) & (data[\"DurationOfPitch\"] <=14), \"DurationOfPitch\"] = 1\n",
+    "    data.loc[(data[\"DurationOfPitch\"] > 14) & (data[\"DurationOfPitch\"] <= 19), \"DurationOfPitch\"] = 2\n",
+    "    data.loc[data[\"DurationOfPitch\"] > 19,\"DurationOfPitch\"] = 3\n",
+    "    data[\"DurationOfPitch\"] = data[\"DurationOfPitch\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duration_pitch(train)\n",
+    "duration_pitch(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occ_dict = {\"Salaried\":0, \"Small Business\":1, \"Large Business\":2, \"Free Lancer\":3}\n",
+    "train[\"Occupation\"] = train[\"Occupation\"].map(occ_dict)\n",
+    "test[\"Occupation\"] = test[\"Occupation\"].map(occ_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gender_dict = {\"Male\":0, \"Female\":1, \"Fe Male\":2}\n",
+    "train[\"Gender\"] = train[\"Gender\"].map(gender_dict)\n",
+    "test[\"Gender\"] = test[\"Gender\"].map(gender_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[\"NumberOfFollowups\"] = train[\"NumberOfFollowups\"].astype(\"int64\")\n",
+    "test[\"NumberOfFollowups\"] = test[\"NumberOfFollowups\"].astype(\"int64\")\n",
+    "train[\"PreferredPropertyStar\"] = train[\"PreferredPropertyStar\"].astype(\"int64\")\n",
+    "test[\"PreferredPropertyStar\"] = test[\"PreferredPropertyStar\"].astype(\"int64\")\n",
+    "train[\"NumberOfChildrenVisiting\"] = train[\"NumberOfChildrenVisiting\"].astype(\"int64\")\n",
+    "test[\"NumberOfChildrenVisiting\"] = test[\"NumberOfChildrenVisiting\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_dict = {\"Basic\":0, \"Deluxe\":1, \"Standard\":2, \"Super Deluxe\":3, \"King\":4}\n",
+    "train[\"ProductPitched\"] = train[\"ProductPitched\"].map(product_dict)\n",
+    "test[\"ProductPitched\"] = test[\"ProductPitched\"].map(product_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[\"NumberOfTrips\"] = train[\"NumberOfTrips\"].astype(\"int64\")\n",
+    "test[\"NumberOfTrips\"] = test[\"NumberOfTrips\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marry_dict = {\"Married\":0, \"Divorced\":1, \"Single\":2, \"Unmarried\":3}\n",
+    "train[\"MaritalStatus\"] = train[\"MaritalStatus\"].map(marry_dict)\n",
+    "test[\"MaritalStatus\"] = test[\"MaritalStatus\"].map(marry_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "des_dict = {\"Executive\":0, \"Manager\":1, \"Senior Manager\":2, \"AVP\":3, \"VP\":4}\n",
+    "train[\"Designation\"] = train[\"Designation\"].map(des_dict)\n",
+    "test[\"Designation\"] = test[\"Designation\"].map(des_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def income_group(data):\n",
+    "    data.loc[data[\"MonthlyIncome\"] <= 20358, \"MonthlyIncome\"] = 0\n",
+    "    data.loc[(data[\"MonthlyIncome\"] > 20358) & (data[\"MonthlyIncome\"] <= 22412), \"MonthlyIncome\"] = 1\n",
+    "    data.loc[(data[\"MonthlyIncome\"] > 22412) & (data[\"MonthlyIncome\"] <= 25401.5), \"MonthlyIncome\"] = 2\n",
+    "    data.loc[data[\"MonthlyIncome\"] >= 25401.5, \"MonthlyIncome\"] = 3\n",
+    "    data[\"MonthlyIncome\"] = data[\"MonthlyIncome\"].astype(\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "income_group(train)\n",
+    "income_group(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Training"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using K-Fold"
+   ]
   }
  ],
  "metadata": {
