add training process

--- a/travel.ipynb
+++ b/travel.ipynb
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,12 +1510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "income_group(train)\n",
     "income_group(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.drop(\"id\", axis=1, inplace=True)"
    ]
   },
   {
@@ -1527,11 +1536,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using K-Fold"
+    "# Classification module\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>TypeofContact</th>\n",
+       "      <th>CityTier</th>\n",
+       "      <th>DurationOfPitch</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>NumberOfPersonVisiting</th>\n",
+       "      <th>NumberOfFollowups</th>\n",
+       "      <th>ProductPitched</th>\n",
+       "      <th>PreferredPropertyStar</th>\n",
+       "      <th>MaritalStatus</th>\n",
+       "      <th>NumberOfTrips</th>\n",
+       "      <th>Passport</th>\n",
+       "      <th>PitchSatisfactionScore</th>\n",
+       "      <th>OwnCar</th>\n",
+       "      <th>NumberOfChildrenVisiting</th>\n",
+       "      <th>Designation</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  Age  TypeofContact  CityTier  DurationOfPitch  Occupation  Gender  \\\n",
+       "0   1    1              1         3                2           1       0   \n",
+       "1   2    3              0         2                1           1       0   \n",
+       "2   3    2              0         3                3           1       0   \n",
+       "3   4    2              0         1                3           1       0   \n",
+       "4   5    0              0         3                0           2       1   \n",
+       "\n",
+       "   NumberOfPersonVisiting  NumberOfFollowups  ProductPitched  \\\n",
+       "0                       2                  5               1   \n",
+       "1                       3                  4               1   \n",
+       "2                       3                  4               1   \n",
+       "3                       3                  6               1   \n",
+       "4                       4                  4               0   \n",
+       "\n",
+       "   PreferredPropertyStar  MaritalStatus  NumberOfTrips  Passport  \\\n",
+       "0                      3              0              1         0   \n",
+       "1                      4              0              1         1   \n",
+       "2                      3              0              5         0   \n",
+       "3                      3              3              6         0   \n",
+       "4                      4              3              3         1   \n",
+       "\n",
+       "   PitchSatisfactionScore  OwnCar  NumberOfChildrenVisiting  Designation  \\\n",
+       "0                       2       0                         1            1   \n",
+       "1                       5       0                         1            1   \n",
+       "2                       5       1                         0            1   \n",
+       "3                       3       1                         2            1   \n",
+       "4                       4       1                         3            0   \n",
+       "\n",
+       "   MonthlyIncome  \n",
+       "0              0  \n",
+       "1              0  \n",
+       "2              1  \n",
+       "3              2  \n",
+       "4              1  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data\n",
+    "y_train = train[\"ProdTaken\"]\n",
+    "x_train = train.drop(\"ProdTaken\", axis=1)\n",
+    "test_pred = test.copy()\n",
+    "test_pred = test_pred.drop(\"id\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using K-Fold\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- Logistic Regression ----\n",
+      "[0.81585678 0.85421995 0.83887468 0.83375959 0.85677749]\n",
+      "Average logis_k score: 0.8398976982097187 \n",
+      "\n",
+      "---- Support Vector Machine ----\n",
+      "[0.79028133 0.83887468 0.83631714 0.84910486 0.84143223]\n",
+      "Average svm_k score: 0.8312020460358056 \n",
+      "\n",
+      "---- K-Nerest Neighbor ----\n",
+      "[0.82097187 0.83375959 0.84143223 0.84398977 0.84143223]\n",
+      "Average knn_k score: 0.8363171355498722 \n",
+      "\n",
+      "---- Decision Tree ----\n",
+      "[0.82608696 0.85933504 0.81841432 0.79795396 0.80051151]\n",
+      "Average tree_k score: 0.8204603580562659 \n",
+      "\n",
+      "---- Random Forest ----\n",
+      "[0.86700767 0.8797954  0.87723785 0.8797954  0.88491049]\n",
+      "Average forest_k score: 0.8777493606138108 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"---- Logistic Regression ----\")\n",
+    "logis_k = LogisticRegression()\n",
+    "logis_k_score = cross_val_score(logis_k, x_train, y_train, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
+    "print(logis_k_score)\n",
+    "print(f\"Average logis_k score: {np.mean(logis_k_score)} \\n\")\n",
+    "\n",
+    "print(\"---- Support Vector Machine ----\")\n",
+    "svm_k = SVC()\n",
+    "svm_k_score = cross_val_score(svm_k, x_train, y_train, cv=kfold, n_jobs=1, scoring='accuracy')\n",
+    "print(svm_k_score)\n",
+    "print(f\"Average svm_k score: {np.mean(svm_k_score)} \\n\")\n",
+    "\n",
+    "print(\"---- K-Nerest Neighbor ----\")\n",
+    "knn_k = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn_k_score = cross_val_score(knn_k, x_train, y_train, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
+    "print(knn_k_score)\n",
+    "print(f\"Average knn_k score: {np.mean(knn_k_score)} \\n\")\n",
+    "\n",
+    "print(\"---- Decision Tree ----\")\n",
+    "tree_k = DecisionTreeClassifier()\n",
+    "tree_k_score = cross_val_score(tree_k, x_train, y_train, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
+    "print(tree_k_score)\n",
+    "print(f\"Average tree_k score: {np.mean(tree_k_score)} \\n\")\n",
+    "\n",
+    "print(\"---- Random Forest ----\")\n",
+    "forest_k = RandomForestClassifier()\n",
+    "forest_k_score = cross_val_score(forest_k, x_train, y_train, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
+    "print(forest_k_score)\n",
+    "print(f\"Average forest_k score: {np.mean(forest_k_score)} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_final = RandomForestClassifier()\n",
+    "forest_final.fit(x_train, y_train)\n",
+    "y_pred = forest_final.predict(test_pred)\n",
+    "submission = pd.DataFrame({\"id\" : test[\"id\"], \"ProdTaken\":y_pred})\n",
+    "submission.to_csv(\"submission.csv\", index=False)"
    ]
   }
  ],
