add README and fix typeo in notebook

--- a/travel_prediction.ipynb
+++ b/travel_prediction.ipynb
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NumberOFFollowups의 최빈값과 평균값은 아래와 같음."
+    "NumberOfFollowups의 최빈값과 평균값은 아래와 같음."
    ]
   },
   {
@@ -747,7 +747,8 @@
     "test_nan = []\n",
     "for t_idx in range(len(test)):\n",
     "    if np.isnan(test[\"Age\"][t_idx]) and np.isnan(test[\"MonthlyIncome\"][t_idx]):\n",
-    "        test_nan.append(t_idx)\n",
+    "        test[\"Age\"][t_idx] = train[\"Age\"].mean()\n",
+    "        test[\"MonthlyIncome\"][t_idx] = train[\"MonthlyIncome\"].mean()\n",
     "    elif np.isnan(test[\"Age\"][t_idx]):\n",
     "        min_idx = -1\n",
     "        min_num = 1000000\n",
@@ -765,9 +766,8 @@
     "            age_idx = 6\n",
     "        test[\"MonthlyIncome\"][t_idx] = result_income_avg[age_idx-1]\n",
     "\n",
-    "# Train, Test의 결측치 row들을 제거해준다.\n",
-    "train.drop(train_nan, axis=0, inplace=True)\n",
-    "test.drop(test_nan, axis=0, inplace=True)"
+    "# Train 결측치 row들을 제거해준다.\n",
+    "train.drop(train_nan, axis=0, inplace=True)"
    ]
   },
   {
